@@ -27,6 +27,7 @@ import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.sql.Array;
 import java.sql.Date;
@@ -1219,11 +1220,11 @@ public class ResultSetImpl extends NativeResultset implements ResultSetInternalM
 
             case FLOAT:
             case FLOAT_UNSIGNED:
-                return new Float(getFloat(columnIndex));
+                return Float.valueOf(getFloat(columnIndex));
 
             case DOUBLE:
             case DOUBLE_UNSIGNED:
-                return new Double(getDouble(columnIndex));
+                return Double.valueOf(getDouble(columnIndex));
 
             case CHAR:
             case ENUM:
@@ -1502,11 +1503,11 @@ public class ResultSetImpl extends NativeResultset implements ResultSetInternalM
 
             case FLOAT:
             case FLOAT_UNSIGNED:
-                return new Float(getFloat(columnIndex));
+                return Float.valueOf(getFloat(columnIndex));
 
             case DOUBLE:
             case DOUBLE_UNSIGNED:
-                return new Double(getDouble(columnIndex));
+                return Double.valueOf(getDouble(columnIndex));
 
             case CHAR:
             case ENUM:
@@ -1653,7 +1654,7 @@ public class ResultSetImpl extends NativeResultset implements ResultSetInternalM
         }
 
         try {
-            return new URL(val);
+            return URI.create(val).toURL();
         } catch (MalformedURLException mfe) {
             throw SQLError.createSQLException(Messages.getString("ResultSet.Malformed_URL____104") + val + "'",
                     MysqlErrorNumbers.SQLSTATE_CONNJ_ILLEGAL_ARGUMENT, getExceptionInterceptor());
@@ -1669,7 +1670,7 @@ public class ResultSetImpl extends NativeResultset implements ResultSetInternalM
         }
 
         try {
-            return new URL(val);
+            return URI.create(val).toURL();
         } catch (MalformedURLException mfe) {
             throw SQLError.createSQLException(Messages.getString("ResultSet.Malformed_URL____107") + val + "'",
                     MysqlErrorNumbers.SQLSTATE_CONNJ_ILLEGAL_ARGUMENT, getExceptionInterceptor());
