@@ -50,25 +50,25 @@ public class MicroPerformanceRegressionTest extends BaseTestCase {
     private final static Map<String, Double> BASELINE_TIMES = new HashMap<>();
 
     static {
-        BASELINE_TIMES.put("ResultSet.getInt()", new Double(0.00661));
-        BASELINE_TIMES.put("ResultSet.getDouble()", new Double(0.00671));
-        BASELINE_TIMES.put("ResultSet.getTime()", new Double(0.02033));
-        BASELINE_TIMES.put("ResultSet.getTimestamp()", new Double(0.02363));
-        BASELINE_TIMES.put("ResultSet.getDate()", new Double(0.02223));
-        BASELINE_TIMES.put("ResultSet.getString()", new Double(0.00982));
-        BASELINE_TIMES.put("ResultSet.getObject() on a string", new Double(0.00861));
-        BASELINE_TIMES.put("Connection.prepareStatement()", new Double(0.18547));
-        BASELINE_TIMES.put("single selects", new Double(46));
-        BASELINE_TIMES.put("5 standalone queries", new Double(146));
-        BASELINE_TIMES.put("total time all queries", new Double(190));
+        BASELINE_TIMES.put("ResultSet.getInt()", Double.valueOf(0.00661));
+        BASELINE_TIMES.put("ResultSet.getDouble()", Double.valueOf(0.00671));
+        BASELINE_TIMES.put("ResultSet.getTime()", Double.valueOf(0.02033));
+        BASELINE_TIMES.put("ResultSet.getTimestamp()", Double.valueOf(0.02363));
+        BASELINE_TIMES.put("ResultSet.getDate()", Double.valueOf(0.02223));
+        BASELINE_TIMES.put("ResultSet.getString()", Double.valueOf(0.00982));
+        BASELINE_TIMES.put("ResultSet.getObject() on a string", Double.valueOf(0.00861));
+        BASELINE_TIMES.put("Connection.prepareStatement()", Double.valueOf(0.18547));
+        BASELINE_TIMES.put("single selects", Double.valueOf(46));
+        BASELINE_TIMES.put("5 standalone queries", Double.valueOf(146));
+        BASELINE_TIMES.put("total time all queries", Double.valueOf(190));
 
-        BASELINE_TIMES.put("PreparedStatement.setInt()", new Double(0.0014));
-        BASELINE_TIMES.put("PreparedStatement.setTime()", new Double(0.0107));
-        BASELINE_TIMES.put("PreparedStatement.setTimestamp()", new Double(0.0182));
-        BASELINE_TIMES.put("PreparedStatement.setDate()", new Double(0.0819));
-        BASELINE_TIMES.put("PreparedStatement.setString()", new Double(0.0081));
-        BASELINE_TIMES.put("PreparedStatement.setObject() on a string", new Double(0.00793));
-        BASELINE_TIMES.put("PreparedStatement.setDouble()", new Double(0.0246));
+        BASELINE_TIMES.put("PreparedStatement.setInt()", Double.valueOf(0.0014));
+        BASELINE_TIMES.put("PreparedStatement.setTime()", Double.valueOf(0.0107));
+        BASELINE_TIMES.put("PreparedStatement.setTimestamp()", Double.valueOf(0.0182));
+        BASELINE_TIMES.put("PreparedStatement.setDate()", Double.valueOf(0.0819));
+        BASELINE_TIMES.put("PreparedStatement.setString()", Double.valueOf(0.0081));
+        BASELINE_TIMES.put("PreparedStatement.setObject() on a string", Double.valueOf(0.00793));
+        BASELINE_TIMES.put("PreparedStatement.setDouble()", Double.valueOf(0.0246));
 
         System.out.println("Calculating global performance scaling factor...");
         for (int i = 0; i < scaleFactorSamples.length; i++) {
